--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;600;700;800&display=swap');
 * {
     margin: 0%;
     padding: 0%;
@@ -6,7 +7,7 @@
 }
 
 body {
-    background-image: radial-gradient(circle at -11.24% 14.64%, #eedcb8 0, #e9deb8 3.85%, #e4dfb9 7.69%, #dee1bb 11.54%, #d8e2bd 15.38%, #d2e4c0 19.23%, #cde5c3 23.08%, #c7e6c7 26.92%, #c1e7cc 30.77%, #bce8d0 34.62%, #b8e8d5 38.46%, #b4e9db 42.31%, #b0e9e0 46.15%, #aee9e5 50%, #ace9ea 53.85%, #ace8ef 57.69%, #ade8f3 61.54%, #aee7f7 65.38%, #b1e6fb 69.23%, #b5e5fe 73.08%, #b9e4ff 76.92%, #bee2ff 80.77%, #c4e1ff 84.62%, #cbdfff 88.46%, #d1ddff 92.31%, #d8dcff 96.15%, #dedaff 100%);
+    background: radial-gradient(circle at -11.24% 14.64%, #eedcb8 0, #e9deb8 3.85%, #e4dfb9 7.69%, #dee1bb 11.54%, #d8e2bd 15.38%, #d2e4c0 19.23%, #cde5c3 23.08%, #c7e6c7 26.92%, #c1e7cc 30.77%, #bce8d0 34.62%, #b8e8d5 38.46%, #b4e9db 42.31%, #b0e9e0 46.15%, #aee9e5 50%, #ace9ea 53.85%, #ace8ef 57.69%, #ade8f3 61.54%, #aee7f7 65.38%, #b1e6fb 69.23%, #b5e5fe 73.08%, #b9e4ff 76.92%, #bee2ff 80.77%, #c4e1ff 84.62%, #cbdfff 88.46%, #d1ddff 92.31%, #d8dcff 96.15%, #dedaff 100%);
 }
 
 section {
@@ -55,7 +56,7 @@ form{
   border-radius: 8px;
   border-style: none;
   box-sizing: border-box;
-  color: #FFFFFF;
+  color: white;
   cursor: pointer;
   flex-shrink: 0;
   font-family: "Inter UI","SF Pro Display",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
@@ -74,4 +75,21 @@ form{
 #alert{
     color: red;
     text-align: center;
+    
+}
+.info{
+    display: flex;
+    gap: 30px;
+}
+.daysThree{
+    display: flex;
+    gap: 10px;
+}
+.daysThree >div{
+    background-color: white;
+    padding: 10px;
+    height: min-content;
+    border-radius: 8px;
+    display: grid;
+
 }
